<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/grey"
    tools:context=".StudentHomePage">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/welcomeStudent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20pt"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.047"
            tools:layout_editor_absoluteX="-16dp" />
        <ListView
            android:layout_width="match_parent"
            android:layout_height="150pt"
            android:id="@+id/courseList"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>
        <Button
            android:layout_width="38pt"
            android:layout_height="15pt"
            android:id="@+id/backBtn"
            android:backgroundTint="@color/garnet"
            android:textColor="@color/white"
            android:text="back"
            android:visibility="invisible"
            android:layout_marginTop="08dp"
            android:layout_marginLeft="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"

            />
        <Button
            android:layout_width="160pt"
            android:layout_height="30pt"
            android:id="@+id/goToUsersClasses"
            android:backgroundTint="@color/garnet"
            android:textColor="@color/white"
            android:text="my classes"
            android:textSize="08pt"
            android:layout_marginTop="4pt"
            app:layout_constraintTop_toBottomOf="@id/welcomeStudent"
            app:layout_constraintBottom_toTopOf="@id/enroll"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />

        <Button
            android:id="@+id/enroll"
            android:layout_width="160pt"
            android:layout_height="30pt"
            android:backgroundTint="@color/garnet"
            android:text="Enroll"
            android:visibility="invisible"
            android:textColor="@color/white"
            android:textSize="8pt"
            app:layout_constraintBottom_toTopOf="@+id/crsCSearch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/goToUsersClasses" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="12pt"
            android:id="@+id/error"
            android:textColor="@color/garnet"
            android:textAlignment="center"
            android:textSize="19dp"
            app:layout_constraintBottom_toTopOf="@id/courseList"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            />
        <EditText
            android:layout_width="80pt"
            android:layout_height="20pt"
            android:id="@+id/crsCSearch"
            android:backgroundTint="@color/white"
            android:hint="Course Code"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/crsNSearch"
            app:layout_constraintTop_toBottomOf="@id/enroll"
            />
        <EditText
            android:layout_width="80pt"
            android:layout_height="20pt"
            android:id="@+id/crsNSearch"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:inputType="text"
            android:hint="Course Name"
            android:maxLines="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enroll"
            app:layout_constraintLeft_toRightOf="@id/crsCSearch"
            />

        <Button
            android:layout_width="100pt"
            android:layout_height="15pt"
            android:id="@+id/search"
            android:backgroundTint="@color/garnet"
            android:text="Search"
            android:textColor="@color/white"
            android:textSize="10dp"
            app:layout_constraintTop_toBottomOf="@id/crsNSearch"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>